tests/ui/higher-ranked/forall-implies-static.stderr
error: lifetime may not live long enough
  --> $DIR/forall-implies-static.rs:6:5
   |
LL | fn bar<'a>() {
   |        -- lifetime `'a` defined here
LL |     foo::<&'a i32>();
   |     ^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
note: due to a current limitation of the type system, this implies a `'static` lifetime
  --> $DIR/forall-implies-static.rs:3:19
   |
LL | fn foo<T>() where for<'a> T: 'a {}
   |                   ^^^^^^^^^^^^^

error: aborting due to 1 previous error

